# myrenderer

./: .gitignore  Bounds3.hpp  CMakeLists.txt  DiffuseMaterial.hpp  ImSampleTest.cpp  ImSplRenderer.hpp  ImportanceSampling.hpp  Intersect.hpp  Light.hpp  Material.hpp  MaterialFactory.hpp  PathTracingRenderer.hpp  PathTracingTest.cpp  Phong.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Sampler.hpp  Scene.cpp  Scene.hpp  Shape.hpp  Sphere.hpp  Triangle.hpp  core.hpp  readme.md
